# snaq-task

./: .env.example  .gitignore  DESIGN.md  NARRATIVE.md  README.md  food_items.json  home_task.md  pyproject.toml
.github/: copilot-instructions.md
.specstory/: .project.json
data/: CIQUAL_LICENSE.md  ciqual_subset.json
eval/: __init__.py  golden.py  judge.py  metrics.py  stability.py
src/snaq_verify/: __init__.py  __main__.py  agent.py  cache.py  cli.py  config.py  models.py  report.py  runner.py
src/snaq_verify/clients/: __init__.py  _retry.py  ciqual.py  openfoodfacts.py  usda.py
src/snaq_verify/logic/: __init__.py  completeness.py  constants.py  discrepancy.py  semantics.py  validation.py  variance.py
tests/: __init__.py  test_cache.py  test_ciqual_client.py  test_completeness.py  test_discrepancy.py  test_eval.py  test_instructions.py  test_judge_concerns.py  test_metrics.py  test_off_client.py  test_reasoning.py  test_semantics.py  test_smoke.py  test_stability.py  test_usda_client.py  test_usda_relevance.py  test_validation.py  test_variance.py
tests/fixtures/: __init__.py  off_not_found.json  off_nutella.json  usda_chicken_search.json
transcripts/: 0-claude.txt  README.md  chat-0.json  chat-1.json  chat-5.json
